--- a/contact.html
+++ b/contact.html
@@ -13,20 +13,7 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
+ 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -112,12 +99,12 @@
 
 				</div>
 				<div class="col-md-3">
-					<h3>Contact Info.</h3>
+					<h3>Kontakt Informationen</h3>
 					<ul class="contact-info">
-						<li><i class="icon-map"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-						<li><i class="icon-phone"></i>+ 1235 2355 98</li>
+						<li><i class="icon-map"></i>Dorfstraße 21, 97337 Dettelbach</li>
+						<li><i class="icon-phone"></i>+49171/2964538</li>
 						<li><i class="icon-envelope"></i><a href="#">info@yoursite.com</a></li>
-						<li><i class="icon-globe"></i><a href="#">www.yoursite.com</a></li>
+						
 					</ul>
 				</div>
 				<div class="col-md-8 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
@@ -134,12 +121,12 @@
 						</div>
 						<div class="col-md-12">
 							<div class="form-group">
-								<textarea name="" class="form-control" id="" cols="30" rows="7" placeholder="Message"></textarea>
+								<textarea name="" class="form-control" id="" cols="30" rows="7" placeholder="Deine Nachricht"></textarea>
 							</div>
 						</div>
 						<div class="col-md-12">
 							<div class="form-group">
-								<input value="Send Message" class="btn btn-primary" type="submit">
+								<input value="Nachricht senden" class="btn btn-primary" type="submit">
 							</div>
 						</div>
 					</div>
